<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="44dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/OpenSettings"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_settings_24" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_timer"
            android:indeterminate="false"
            android:max="86400"
            android:progress="86400"
            android:progressDrawable="@drawable/status_bar"
            android:rotation="-90" />

        <TextView
            android:id="@+id/MainTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="00:15:00"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Hours_short_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="80dp"
                android:paddingRight="30dp"
                android:text="@string/hours_short"
                android:textColor="?attr/timerSecondColor"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/Minutes_short_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="80dp"
                android:paddingRight="30dp"
                android:text="@string/minutes_short"
                android:textColor="?attr/timerSecondColor"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/Seconds_short_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="80dp"
                android:paddingRight="30dp"
                android:text="@string/seconds_short"
                android:textColor="?attr/timerSecondColor"
                android:textSize="9sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SetTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="00:15:00"
            android:textColor="?attr/timerSecondColor" />

        <ImageButton
            android:id="@+id/addTime"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/main_rounded_button"
            android:src="@drawable/ic_baseline_add_24"
            android:tint="?attr/SecondaryTextColor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/StartTime"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/main_rounded_button"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:tint="?attr/SecondaryTextColor" />

        <ImageButton
            android:id="@+id/PauseTimer"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/main_rounded_button"
            android:src="@drawable/ic_baseline_pause_24"
            android:tint="?attr/SecondaryTextColor" />

        <ImageButton
            android:id="@+id/ResetTimer"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/main_rounded_button"
            android:src="@drawable/ic_baseline_refresh_24"
            android:tint="?attr/SecondaryTextColor" />
    </LinearLayout>

</LinearLayout>